# XML-DSA-PROJECT

./: README.md  SuggestUsers.cpp  SuggestUsers_H.h
GUI/: CMakeLists.txt  Graph.cpp  Graph.h  Most_followers.cpp  Most_followers.h  SuggestUsers.cpp  SuggestUsers_H.h  XML_Fix.cpp  XML_Validator.cpp  compression.cpp  compression.h  decompression.cpp  decompression.h  format.cpp  format.h  grapwindow.cpp  grapwindow.h  grapwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minifying.cpp  mostActiveUser.cpp  mostActiveUser.h  mutual_followers.cpp  mutual_followers.h  xmltojson.cpp  xmltojson.h
Header Files/: Graph.h  PostSearchFunctions.h  SuggestUsers_H.h  Tree.h  XML_Fix.h  XML_Validator.h  compression.h  decompression.h  drawGraph.h  format.h  header.h  minifying.h  mostActiveUser.h  mutual_followers.h  xmltojson.h
Source Files/: ErrorViewer.cpp  Graph.cpp  Main.cpp  Most_followers.cpp  PostSearchFunctions  PostSearchFunctions.cpp  PostSearchFunctions.h  SuggestUsers.cpp  XML_Fix.cpp  XML_Validator.cpp  XML_tags.cpp  compression.cpp  decompression.cpp  drawGraph.cpp  format.cpp  input_file.xml  minifying.cpp  mostActiveUser.cpp  mutual_followers.cpp  test.cpp  xmltojson.cpp
myFirstApplication/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
